--- a/ToDo_App/public/index.html
+++ b/ToDo_App/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div class = "bgImg"></div>
     <h2>To Do App</h2>
     <form>
         <input type="text" id="newtask" placeholder="Enter new task" required />
@@ -19,3 +20,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
